clusters/test/ingress/dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    flame.pawelmalak/url: https://dashboard.kubus-test.int.sambaum.ch
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - "dashboard.kubus-test.int.sambaum.ch"
  rules:
  - host: dashboard.kubus-test.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
