clusters/test/ingress/kustomization.yaml
bases:
  - ../../../infrastructure/base/kubernetes-dashboard/
patches:
  - dashboard.yaml
